--- a/06-build-page/project-dist/index.html
+++ b/06-build-page/project-dist/index.html
@@ -36,7 +36,8 @@
       </div>
     </div>
   </div>
-</header>    <main class="main">
+</header>
+    <main class="main">
 <div class="container">
   <div class="inner-container">
     <h2 class="main-title">Latest articles</h2>
@@ -77,7 +78,9 @@
       </form>
     </div>
   </div>
-</div>    </main>
+</div>
+    </main>
+  
 <footer class="footer">
   <div class="container">
     <div class="inner-container footer-inner-container">
@@ -98,5 +101,6 @@
       </ul>
     </div>
   </div>
-</footer></body>
+</footer>
+</body>
 </html>
